# qt_raytracer_challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_build_matrix.yml
fontello/: config.json  demo.html
fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
fontello/font/: fontello.eot
raytracer/: .gitignore  CMakeCache.txt  CMakeLists.txt  raytracer.pro
raytracer/catch/: CMakeLists.txt  arealights.cpp  catch.hpp  chapter1.cpp  chapter10.cpp  chapter11.cpp  chapter12.cpp  chapter13.cpp  chapter2.cpp  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp  chapter9.cpp  tests.cpp
raytracer/main/: CMakeLists.txt  InformationWindow.qml  SettingsWindow.qml  appsettings.cpp  appsettings.h  camera.h  canvas.cpp  canvas.h  color.cpp  color.h  computations.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  effect.h  engine.cpp  engine.h  equal.h  glwidget.cpp  glwidget.h  helper.cpp  helper.h  imageitem.cpp  imageitem.h  intersection.h  light.h  lighting.h  main.cpp  main.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.h  materials.h  matrix.cpp  matrix.h  matrix4x4.cpp  matrix4x4.h  object.h  (+25 more)
raytracer/tests/: CMakeLists.txt  tests.cpp  tests.pro  tst_tests.cpp
